[refactor] Controller - Service 로직 분리